--- a/src/client/js/pages/layout/nav.html
+++ b/src/client/js/pages/layout/nav.html
@@ -18,7 +18,76 @@
     </div>
 </nav>-->
 <!-- NAVIGATION -->
-<nav class="navbar navbar-fixed-top">
+<div class="navbar navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <!-- Logo is always shown (on standard and mobile menus) -->
+            <a ui-sref="shell.home" class="logo" ng-click="vm.setActive({code: 'home'})"></a>
+            <!-- only show standard menu at bigger resolutions -->
+            <nav class="nav-menu-standard">
+                <ul class="pull-right">
+                    <li>
+                        <a ui-sref="shell.home" ng-click="vm.setActive({code: 'home'})"><i class="fa fa-home"></i>Home</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                            <i class="fa fa-th-large"></i>Sites
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu has-icons" role="menu">
+                            <li role="presentation" ng-repeat="site in vm.sites">
+                                <a role="menuitem" tabindex="-1" ng-href="#/shell/site/{{site.code}}" ng-click="vm.setActive(site)">
+                                    <span class="fa fa-check icon" ng-hide="!vm.isActive(site)"></span>
+                                    <h4>
+                                        <span>{{site.name}}</span>
+                                    </h4>
+                                    <small>
+                                        <span>{{site.address.addressLine1}}</span>,
+                                        <span>{{site.address.city}}</span>
+                                        <span>{{site.address.province}}</span>
+                                    </small>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+            <!-- Only show toggle on mobile -->
+            <rdc-hamburger-menu></rdc-hamburger-menu>
+        </div>
+
+        <!-- Mobile navbar content (hides until toggle translates it)-->
+        <nav class="nav-menu-mobile">
+            <div class="shadow"></div>
+            <div>
+                <ul>
+                    <li>
+                        <a ui-sref="shell.home" ng-click="vm.setActive({code: 'home'})"><i class="fa fa-home"></i>Home</a>
+                    </li>
+                    <li>
+                        <span><i class="fa fa-th-large"></i>Sites</span>
+                    </li>
+                    <li role="presentation" ng-repeat="site in vm.sites">
+                        <a role="menuitem" tabindex="-1" ng-href="#/shell/site/{{site.code}}" ng-click="vm.setActive(site)">
+                            <span class="fa fa-check icon" ng-hide="!vm.isActive(site)"></span>
+                            <h4>
+                                <span>{{site.name}}</span>
+                            </h4>
+                            <small>
+                                <span>{{site.address.addressLine1}}</span>,
+                                <span>{{site.address.city}}</span>
+                                <span>{{site.address.province}}</span>
+                            </small>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+</div>
+
+
+<!--<nav class="navbar navbar-fixed-top">
     <div class="container">
         <a ui-sref="shell.home" class="logo" ng-click="vm.setActive({code: 'home'})"></a>
         <ul class="nav pull-right">
@@ -59,13 +128,13 @@
             <li>
                 <span class="social-media-group">
                     <a href="http://www.facebook.com/rainbowdaynurseryinc" target="_blank">
-                        <i class="fa fa-facebook-official"></i></a>
+                        <i class="fa fa-facebook-official"></i>
+                    </a>
                 </span>
             </li>
         </ul>
     </div>
-</nav>
-
+</nav>-->
 <!--<div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-header">
         <rdc-hamburger-menu></rdc-hamburger-menu>
