dist gulp task working.

--- a/src/client/js/pages/layout/shell.html
+++ b/src/client/js/pages/layout/shell.html
@@ -1,6 +1,6 @@
 <div>
     <header class="clearfix">
-      <div data-ng-include="'js/pages/layout/nav.html'"></div>
+      <div data-ng-include="'/js/pages/layout/nav.html'"></div>
     </header>
 
     <div id="content" class="content">
