--- a/src/client/css/site.less
+++ b/src/client/css/site.less
@@ -5,7 +5,7 @@
 @import "_card.less";
 @import "_core.less";
 @import "_filter-box.less";
-@import "_fonts.less";
+//@import "_fonts.less";
 @import "_footer.less";
 @import "_grid.less"; 
 @import "_map.less";
