Banner experiments, business card experiments

--- a/src/client/css/_nav.less
+++ b/src/client/css/_nav.less
@@ -9,10 +9,10 @@
 .navbar .navbar-header {
     width: 100%;
     margin: 0;
-    -moz-transition: transform .5s cubic-bezier(.16, .68, .43, .99);
-    -o-transition: transform .5s cubic-bezier(.16, .68, .43, .99);
-    -webkit-transition: transform .5s cubic-bezier(.16, .68, .43, .99);
-    transition: transform .5s cubic-bezier(.16, .68, .43, .99);
+    -moz-transition: transform .5s cubic-bezier(.16, .68, .43, .99) .3s;
+    -o-transition: transform .5s cubic-bezier(.16, .68, .43, .99) .3s;
+    -webkit-transition: transform .5s cubic-bezier(.16, .68, .43, .99) .3s;
+    transition: transform .5s cubic-bezier(.16, .68, .43, .99) .3s;
 }
 
 .navbar.mobile-menu-open .navbar-header {
@@ -239,10 +239,10 @@
     -o-transform: translateX(300px);
     -webkit-transform: translateX(300px);
     transform: translateX(300px);
-    -moz-transition: transform .5s cubic-bezier(.16, .68, .43, .99);
-    -o-transition: transform .5s cubic-bezier(.16, .68, .43, .99);
-    -webkit-transition: transform .5s cubic-bezier(.16, .68, .43, .99);
-    transition: transform .5s cubic-bezier(.16, .68, .43, .99);
+    -moz-transition: transform .5s cubic-bezier(.16, .68, .43, .99) .3s;
+    -o-transition: transform .5s cubic-bezier(.16, .68, .43, .99) .3s;
+    -webkit-transition: transform .5s cubic-bezier(.16, .68, .43, .99) .3s;
+    transition: transform .5s cubic-bezier(.16, .68, .43, .99) .3s;
 }
 
 .mobile-menu-open .nav-menu-mobile {
