--- a/src/client/css/site.less
+++ b/src/client/css/site.less
@@ -1,6 +1,7 @@
 @import "_animate.less";
 @import "_arrow.less";
 @import "_banner.less";
+@import "_business.card.less";
 @import "_button.less";
 @import "_card.less";
 @import "_core.less";
