--- a/src/client/css/_banner.less
+++ b/src/client/css/_banner.less
@@ -31,8 +31,22 @@
 // MAIN BANNER -------------------
 .main-banner {
     padding-bottom: 50px;
-    margin-top: 59px;
+    padding-top: 10px;
+    background: #f2f2f2;
+    background: radial-gradient(circle farthest-side at center,#FFF 0,#dae4e4 100%);
 }
+
+/*.main-banner h1:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    pointer-events: none;
+    background: radial-gradient(circle farthest-side at top,rgba(255,255,255,0.45) 0,rgba(255,255,255,0) 100%);
+}*/
 
 .main-banner.has-banner-message {
     margin-top: 0;
@@ -42,25 +56,10 @@
     width: 100%;
 }
 
-.main-banner .banner-image .sun {
-    position: absolute;
-    top: 37px;
-    z-index: -1;
-    left: 200px;
-    -moz-transition: all 1s ease;
-    -o-transition: all 1s ease;
-    -webkit-transition: all 1s ease;
-    transition: all 1s ease;
-}
-
-.main-banner .banner-image:hover .sun {
-    top: -60px;
-    left: 140px;
-}
-
 .main-banner .title h1 {
     text-align: center;
     font-size: 4em;
+    letter-spacing: -0.06em;
     font-weight: bold;
     font-family: "Roboto";
     text-transform: uppercase;
@@ -68,6 +67,7 @@
 
 .main-banner .title h1 .emphasis {
     color: #f6883a;
+    margin-right: 4px;
 }
 
 .main-banner .title .lead {
