--- a/src/client/css/_section.less
+++ b/src/client/css/_section.less
@@ -10,12 +10,12 @@
 .section.section-light-gray {
     background: #f1f1f1;
     background-color: #f9f9fb;
-    border-top: 1px solid #f1f1f3;
+    border-top: 1px solid #eee;
 }
 
 
 .section.section-dark-gray {
-    background-color: #f1f1f1;
+    background-color: #eeeeee;
 }
 
 
@@ -119,7 +119,7 @@
     color: white;
 }
 
- 
+
 // SECTION BODY -----------
 .section-body {
     margin-bottom: 35px;
@@ -137,3 +137,5 @@
     width: 81px;
     margin-right: 13px;
 }
+
+
