New banner image, cleaned up gulp help, style updates on details.

--- a/src/client/css/_banner.less
+++ b/src/client/css/_banner.less
@@ -52,8 +52,12 @@
     margin-top: 0;
 }
 
-.main-banner .banner-image .rainbow {
-    width: 100%;
+.main-banner .banner-image {
+    background: url('../img/rainbow-text-lg.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 440px;
+
 }
 
 .main-banner .title h1 {
