--- a/src/client/css/_card.less
+++ b/src/client/css/_card.less
@@ -21,7 +21,6 @@
     border-bottom: 3px solid #323232;
     padding-left: 15px;
     padding-bottom: 10px;
-    text-align: center;
     margin-bottom: 7px;
     font-weight: 600;
     text-transform: uppercase;
@@ -32,7 +31,6 @@
     padding-left: 15px;
     padding-right: 15px;
     margin-bottom: 3px;
-    text-align: center;
 }
 
 
@@ -40,11 +38,18 @@
 .cards.cards-light .card {
     font-size: 18px;
     line-height: 23px;
-    margin-bottom: 6px;
+    margin-bottom: 26px;
     border-top: 1px solid rgba(128, 128, 128, 0.31);
     padding-top: 14px;
 }
 
+
+.cards.cards-light .card .icon {
+    font-size: 25px;
+    display: inline;
+    float: left;
+    margin-right: 14px;
+}
 
 .cards.cards-light .card h3 {
     font-size: 18px;
