--- a/src/client/css/_map.less
+++ b/src/client/css/_map.less
@@ -8,11 +8,10 @@
 
 
 .map-lg {
-    width: 591px;
     border: 8px solid white;
     -moz-box-sizing: content-box;
     -webkit-box-sizing: content-box;
     box-sizing: content-box;
-    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.39);
-    border-radius: 3px;
+    border-radius: 4px;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
 }
