--- a/src/client/js/pages/layout/shell.html
+++ b/src/client/js/pages/layout/shell.html
@@ -6,4 +6,8 @@
     <div id="content" class="content">
         <div ui-view="main" class="view-slide-in"></div>
     </div>
+
+    <footer>
+        <div data-ng-include="'/js/pages/layout/footer.html'"></div>
+    </footer>
 </div>
