--- a/src/client/css/_banner.less
+++ b/src/client/css/_banner.less
@@ -57,7 +57,6 @@
     background-size: contain;
     background-repeat: no-repeat;
     height: 440px;
-
 }
 
 .main-banner .title h1 {
@@ -86,6 +85,7 @@
 .site-banner {
     background: repeating-linear-gradient(45deg, rgba(228, 228, 228, 0.12), rgba(228, 228, 228, 0.1) 1px, rgba(16, 19, 35, 0) 1px, rgba(22, 26, 51, 0) 13px);
     height: 350px;
+    margin-top: 59px;
 }
 
 .site-banner .site-banner-background {
@@ -112,3 +112,103 @@
     color: rgba(255, 255, 255, 0.92);
     font-size: 20px;
 }
+
+// BANNER NAV BUTTONS =================================
+.site-banner nav a {
+    position: absolute;
+    top: 160px;
+    height: 132px;
+    width: 52px;
+    overflow: hidden;
+    -moz-transition: width .25s ease-out;
+    -o-transition: width .25s ease-out;
+    -webkit-transition: width .25s ease-out;
+    transition: width .25s ease-out;
+}
+
+.site-banner nav a:hover {
+    cursor: pointer;
+    width: 250px;
+}
+
+.site-banner nav a.next {
+    right: 0;
+}
+
+.site-banner nav a.prev {
+    left: 0;
+}
+
+// Nav Button --
+.site-banner nav a .nav-button {
+    position: absolute;
+    background-color: #a4a4a4;
+    height: 100%;
+    width: 52px;
+    text-align: center;
+}
+
+.site-banner nav a:hover .nav-button {
+    background-color: #BFBFBF;
+}
+
+.site-banner nav a.next .nav-button {
+    padding-left: 6px;
+    right: 0;
+}
+
+.site-banner nav a.prev .nav-button {
+    padding-right: 6px;
+}
+
+// Nav Button Arrow --
+.site-banner nav a i {
+    color: #3E3E3E;
+    font-size: 80px;
+    line-height: 120px;
+    -moz-transition: color .3s ease;
+    -o-transition: color .3s ease;
+    -webkit-transition: color .3s ease;
+    transition: color .3s ease;
+}
+
+.site-banner nav a:hover i {
+    color: white;
+}
+
+.site-banner nav a:active i {
+    color: #aaa;
+}
+
+// Nav text --
+.site-banner nav a .info {
+    position: absolute;
+    top: 0;
+    width: 192px;
+    height: 100%;
+    background-color: #e2e2e2;
+    border: 1px solid #c2c2c2;
+    color: #6f6f6f;
+    padding-top: 40px;
+    padding-left: 30px;
+}
+
+.site-banner nav a.prev .info {
+    left: 52px;
+}
+
+.site-banner nav a.prev:hover .info {
+}
+
+.site-banner nav a.next .info {
+    right: 52px;
+}
+
+.site-banner nav a .info h3 {
+    margin-bottom: 2px;
+}
+
+.site-banner nav a .info .sub-title {
+    font-size: 15px;
+}
+
