--- a/src/client/css/_footer.less
+++ b/src/client/css/_footer.less
@@ -1,6 +1,25 @@
 ﻿.footer {
-    height: 33px;
-    padding:5px 20px;
-    background: #333;
+    height: 52px;
+    padding-top: 8px;
+    background-color: #333;
     color: #ccc;
+    text-align: center;
+}
+
+.footer .top, 
+.footer .top .arrow-up {
+    color: white;
+    opacity: 0.6;
+    font-size: 17px;
+}
+
+.footer .top:hover {
+    cursor: pointer;
+    text-decoration: none;
+    opacity: 1;
+}
+
+.footer .top .arrow-up {
+    display: block;
+    line-height: 10px;
 }
