--- a/src/client/js/pages/layout/footer.html
+++ b/src/client/js/pages/layout/footer.html
@@ -1,5 +1,8 @@
 <!-- NAVIGATION -->
 <div class="footer">
-    <a ng-click="scrollToTop()">Top</a>
+    <a class="top" ng-click="vm.scrollToTop()">
+        <i class="arrow-up fa fa-angle-up"></i>
+        <span>Top</span>
+    </a>
 </div>
 
