--- a/src/client/css/_footer.less
+++ b/src/client/css/_footer.less
@@ -1,25 +1,57 @@
-﻿.footer {
-    height: 52px;
-    padding-top: 8px;
-    background-color: #333;
-    color: #ccc;
+﻿// MAIN FOOTER ----------------------------
+.main-footer {
+    background: #36474F;
+}
+
+// MAIN FOOTER NAV ----------------------------
+.main-footer nav {
+    padding: 48px;
+    color: #fff;
+}
+
+// FOOTER COLUMN ----------------------------
+.main-footer nav .footer-col {
+    float: left;
+    margin-right: 40px;
+}
+
+// FOOTER COLUMN BODY ----------------------------
+.main-footer nav ul {
+    list-style-type: none;
+}
+
+// FOOTER HEADER ----------------------------
+.main-footer nav h3 {
+    font-family: "Roboto";
+    font-weight: 600;
+    margin: 0 0 16px 0;
+    font-size: 24px;
+    opacity: .87;
+    line-height: 32px;
+}
+
+// FOOTER ITEM ----------------------------
+
+// FOOTER ITEM ANCHOR ----------------------------
+.footer-col .footer-col-item a {
+    font-family: 'Roboto';
+    font-size: 16px;
+    line-height: 28px;
+    color: #e5e5e5;
+}
+
+// FOOTER ITEM ICON ----------------------------
+.footer-col .footer-col-item .footer-icon {
+    font-size: 22px;
+    margin-right: 6px;
+}
+
+// FOOTER (small footer) ----------------------------
+.main-footer footer {
     text-align: center;
+    padding: 16px;
+    position: relative;
+    background: #253238;
+    color: #fff;
 }
 
-.footer .top, 
-.footer .top .arrow-up {
-    color: white;
-    opacity: 0.6;
-    font-size: 17px;
-}
-
-.footer .top:hover {
-    cursor: pointer;
-    text-decoration: none;
-    opacity: 1;
-}
-
-.footer .top .arrow-up {
-    display: block;
-    line-height: 10px;
-}
