--- a/src/client/css/_card.less
+++ b/src/client/css/_card.less
@@ -54,17 +54,19 @@
 .cards.cards-light .card h3 {
     font-size: 18px;
     line-height: 23px;
-    margin-bottom: 10px;
+    margin-bottom: 6px;
 }
 
 
 .cards.cards-light .card p {
     font-size: 13px;
     color: #363f4d;
-    margin-bottom: 2px;
+    margin-bottom: 0;
+    padding-left: 35px;
 }
 
 
 .cards.cards-light .card a {
-    font-size: 14px;
+    font-size: 13px;
+    padding-left: 35px;
 }
