--- a/src/client/css/_nav.less
+++ b/src/client/css/_nav.less
@@ -9,10 +9,10 @@
 .navbar .navbar-header {
     width: 100%;
     margin: 0;
-    -moz-transition: transform .5s cubic-bezier(.16, .68, .43, .99) .3s;
-    -o-transition: transform .5s cubic-bezier(.16, .68, .43, .99) .3s;
-    -webkit-transition: transform .5s cubic-bezier(.16, .68, .43, .99) .3s;
-    transition: transform .5s cubic-bezier(.16, .68, .43, .99) .3s;
+    -moz-transition: transform .5s cubic-bezier(.16, .68, .43, .99) .2s;
+    -o-transition: transform .5s cubic-bezier(.16, .68, .43, .99) .2s;
+    -webkit-transition: transform .5s cubic-bezier(.16, .68, .43, .99) .2s;
+    transition: transform .5s cubic-bezier(.16, .68, .43, .99) .2s;
 }
 
 .navbar.mobile-menu-open .navbar-header {
@@ -70,6 +70,7 @@
 .navbar .nav-menu-standard ul {
     list-style-type: none;
     margin: 0;
+    padding-right: 12%;
 }
 
 .navbar .nav-menu-standard ul > li {
@@ -132,7 +133,7 @@
 }
 
 .nav-menu-standard .social-menu a {
-   color: #292929;
+    color: #292929;
     background: rgba(255, 255, 255, 0.64);
     display: inline-block;
     width: 39px;
@@ -157,7 +158,7 @@
 }
 
 .navbar .nav-menu-standard .dropdown-menu {
-    right: 0; 
+    right: 0;
     left: initial;
     padding: 0;
     border-radius: 0;
@@ -235,10 +236,10 @@
     -o-transform: translateX(300px);
     -webkit-transform: translateX(300px);
     transform: translateX(300px);
-    -moz-transition: transform .5s cubic-bezier(.16, .68, .43, .99) .3s;
-    -o-transition: transform .5s cubic-bezier(.16, .68, .43, .99) .3s;
-    -webkit-transition: transform .5s cubic-bezier(.16, .68, .43, .99) .3s;
-    transition: transform .5s cubic-bezier(.16, .68, .43, .99) .3s;
+    -moz-transition: transform .5s cubic-bezier(.16, .68, .43, .99) .2s;
+    -o-transition: transform .5s cubic-bezier(.16, .68, .43, .99) .2s;
+    -webkit-transition: transform .5s cubic-bezier(.16, .68, .43, .99) .2s;
+    transition: transform .5s cubic-bezier(.16, .68, .43, .99) .2s;
 }
 
 .mobile-menu-open .nav-menu-mobile {
@@ -251,7 +252,7 @@
 
 .nav-menu-mobile .shadow {
     position: absolute;
-    box-shadow: 3px 0 21px #535353;
+    box-shadow: 11px 0 25px rgba(83, 83, 83, 0.81);
     margin-left: -8px;
     width: 7px;
     height: 100%;
@@ -264,13 +265,50 @@
     border-bottom: 1px solid #ccc;
 }
 
-.nav-menu-mobile ul > li.sub-nav {
-    background-color: #F9F9FB;
-    padding-left: 25px;
+.nav-menu-mobile .main-nav > .main-nav-item {
+    -moz-transition: background-color .2s ease;
+    -o-transition: background-color .2s ease;
+    -webkit-transition: background-color .2s ease;
+    transition: background-color .2s ease;
 }
 
-.nav-menu-mobile ul > li.sub-nav:first-child {
-    box-shadow: 1px 7px 6px rgba(223, 223, 224, 0.42) inset;
+.nav-menu-mobile .main-nav > .main-nav-item:hover {
+    background-color: #eee;
+    cursor: pointer;
+}
+
+.nav-menu-mobile .sub-nav {
+    padding: 0;
+}
+
+.sub-nav ul li {
+    background-color: #F9F9FB;
+    padding-left: 25px;
+    -moz-transition: background-color .2s ease;
+    -o-transition: background-color .2s ease;
+    -webkit-transition: background-color .2s ease;
+    transition: background-color .2s ease;
+}
+
+.sub-nav ul li a {
+    -moz-transition: color .2s ease;
+    -o-transition: color .2s ease;
+    -webkit-transition: color .2s ease;
+    transition: color .2s ease;
+}
+
+.sub-nav ul li:first-child {
+    box-shadow: 2px 2px 7px rgba(90, 74, 96, 0.16) inset
+}
+
+.sub-nav ul li:hover {
+    background-color: rgba(68, 81, 86, 0.13);
+    border-color: #bbb;
+    cursor: pointer;
+}
+
+.sub-nav ul li:hover a {
+    color: black;
 }
 
 .nav-menu-mobile ul > li a {
@@ -297,6 +335,7 @@
 .navbar-toggle {
     display: none;
     margin-top: 0;
+    margin-right: 0;
 }
 
 @media (max-width: 740px) {
@@ -317,10 +356,10 @@
     position: relative;
     background-color: white;
     margin-top: 12px;
-    -moz-transition: all 250ms ease-in-out;
-    -o-transition: all 250ms ease-in-out;
-    -webkit-transition: all 250ms ease-in-out;
-    transition: all 250ms ease-in-out;
+    -moz-transition: all 150ms ease-in-out;
+    -o-transition: all 150ms ease-in-out;
+    -webkit-transition: all 150ms ease-in-out;
+    transition: all 150ms ease-in-out;
 }
 
 .navbar-toggle.active .icon-bar:nth-of-type(1) {
