--- a/src/client/css/_site.list.less
+++ b/src/client/css/_site.list.less
@@ -1,5 +1,4 @@
 ﻿.site-list {
-     
 }
 
 
@@ -17,7 +16,7 @@
     padding: 0;
 }
 
-  
+
 .site-list .panel-heading h4 {
     font-size: 21px;
     font-weight: 400;
@@ -53,15 +52,18 @@
 .site-list .panel.panel-default .panel-body {
     border-bottom: 1px solid rgba(255, 255, 255, 0.09);
     border-top: 5px solid rgba(255, 255, 255, 0.09);
-    padding: 25px 25px 0;
+    padding: 15px 25px 0;
 }
 
 
 .site-list .list-text {
-    padding-bottom: 15px;
+    padding-bottom: 5px;
     padding-left: 5px;
 }
 
+.site-list .list-text .list-text-section {
+    margin-bottom: 7px;
+}
 
 .site-list .list-text h4 {
     font-size: 28px;
@@ -74,6 +76,7 @@
     margin-bottom: 1px;
     font-size: 16px;
     color: rgba(204, 204, 204, 0.67);
+    line-height: 1.6em;
 }
 
 
@@ -90,7 +93,7 @@
 
 
 .site-list.dark .list-text .more-info {
-    margin-top: 30px;
+    margin-top: 15px;
 }
 
 
@@ -127,5 +130,6 @@
 
 
 .list-img {
-    padding-bottom: 30px;
+    padding-bottom: 20px;
+    padding-top: 5px;
 }
