--- a/src/client/js/pages/layout/footer.html
+++ b/src/client/js/pages/layout/footer.html
@@ -13,6 +13,10 @@
                         <i class="footer-icon fa fa-facebook-square"></i> Facebook
                     </a>
                 </li>
+                <li class="footer-col-item">
+                    <a href="tel:204-256-0672"><i class="footer-icon fa fa-phone"></i>(204)-256-0672</a>
+                </li>
+
             </ul>
         </div>
         <div class="footer-col">
