--- a/src/client/css/_card.less
+++ b/src/client/css/_card.less
@@ -8,9 +8,8 @@
     background: #202020;
     border: 4px solid #323232;
     border-radius: 5px;
-    float: left;
-    margin-right: 25px;
-    min-width: 240px;
+    margin-right: 10px;
+    margin-left: 10px;
     margin-bottom: 25px;
     padding-bottom: 7px;
 }
@@ -52,14 +51,14 @@
 }
 
 .cards.cards-light .card h3 {
-    font-size: 18px;
+    font-size: 20px;
     line-height: 23px;
-    margin-bottom: 6px;
+    margin-bottom: 7px;
 }
 
 
 .cards.cards-light .card p {
-    font-size: 13px;
+    font-size: 14px;
     color: #363f4d;
     margin-bottom: 0;
     padding-left: 35px;
@@ -67,6 +66,6 @@
 
 
 .cards.cards-light .card a {
-    font-size: 13px;
+    font-size: 14px;
     padding-left: 35px;
 }
