--- a/src/client/css/_section.less
+++ b/src/client/css/_section.less
@@ -96,7 +96,8 @@
 .section .section-details .sub-title {
     margin-bottom: 35px;
     font-size: 18px;
-    margin-top: -15px;
+    margin-top: -7px;
+    line-height: 1.2em;
 }
 
 
@@ -122,7 +123,6 @@
 
 // SECTION BODY -----------
 .section-body {
-    margin-bottom: 35px;
 }
 
 
@@ -137,5 +137,3 @@
     width: 81px;
     margin-right: 13px;
 }
-
-
