--- a/src/client/css/_banner.less
+++ b/src/client/css/_banner.less
@@ -12,9 +12,12 @@
     font-weight: 600;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 850px) {
     .banner-message {
         font-size: 14px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: left;
     }
 }
 
